[tool.poetry]
name = "freeradical"
version = "0.1.0"
description = "Stuff that runs the FreeRadical.zone Mastodon instance"
authors = ["Kirk Strauser <kirk@strauser.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.7"
jinja2 = "^2.10"
passlib = "^1.7"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
flake8 = "^3.7"
mypy = "^0.700.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
