[tool.poetry]
name = "freeradical"
version = "0.1.0"
description = "Stuff that runs the FreeRadical.zone Mastodon instance"
authors = ["Kirk Strauser <kirk@strauser.com>"]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^8.2"
jinja2 = "^3.1"
passlib = "^1.7"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
